Fixed bug on name blurring and updated bio

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ body {
 	font-weight: 500;
 	opacity: 0;
 	filter: blur(4px);
-	transition: opacity 500ms ease-out, filter 500ms ease-out;
+	transition: opacity 500ms ease-out, filter 500ms ease-out, color 500ms ease-out;
 }
 
 #skills, #date-time,#developer, #about-info {
@@ -168,6 +168,10 @@ body {
 #about-close:hover {
 	transform: rotate(180deg);
 	cursor: pointer;
+}
+
+#about-info {
+	text-align: justify;
 }
 
 /*---------------------------------PROJECT FEED-------------------------------*/
@@ -334,7 +338,6 @@ body {
 		font-size: var(--desk-font-XL);
 		line-height: 4.6vw;
 		z-index: 6;
-		transition: color 500ms;
 	}
 
 	#title {
